logs/validate.20260408-014310.log
Mode: isolate
Isolate: including Chap18 Chap19 Chap02 Chap51
error: unexpected token, expected `;`
   --> src/Chap51/TopDownDPStEph.rs:374:17
    |
374 |                 self.spec_memo()[(a, b)] as nat == #[trigger] self.spec_med(a as nat, b as nat)
    |                 ^^^^

error[E0425]: cannot find type `TopDownDPStEphS` in this scope
   --> src/Chap51/TopDownDPStEph.rs:436:20
    |
436 |     impl Debug for TopDownDPStEphS {
    |                    ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `TopDownDPStEphS` in this scope
   --> src/Chap51/TopDownDPStEph.rs:446:22
    |
446 |     impl Display for TopDownDPStEphS {
    |                      ^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 2620MB, peak z3 RSS: 0MB, min free: 23908MB
Sampled CPU Usage: rust_verify: 26s, z3 children: 0s
